--- a/src/pages/ChatsPage/ChatsPage.module.scss
+++ b/src/pages/ChatsPage/ChatsPage.module.scss
@@ -1,109 +1,69 @@
 .ChatsPage{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    top:32px;
-    align-items: center;
-    background-size: cover;
-    width: 100vw;
-    position: fixed;
-    height: 100vh;
     background-color: white;
-    margin-top: 0vmin;
-    border-top: solid 1px black;
+    position:absolute;
+    top: 33px;
+    width: 100vw;
+    height: 95vh;
+    display: flex;
+    justify-content: space-evenly;
+    z-index: 0;
+    align-items: center;
 
-    h3{
+    .yourMessages{
+        position: absolute;
+        top: 0;
+        font-size:medium;
         width: 100vw;
-        display: flex;
-        margin: 5px;
-        padding-left:10vw;
-        color: transparent;
-        background: rgb(180,217,247);
-        -webkit-background-clip: text;
-        -moz-background-clip: text;
-        background-clip: text;
-        text-shadow: 0px 3px 3px rgba(255,255,255,0.5);
+        color: rgb(180, 217, 247);
+        padding-left: 10vw;
     }
-}
 
-
-@media (max-width:900px){
-    .ChatsPage{
-    top:10vh;
-
-    }
-}
-
-@media (prefers-color-scheme:dark) {
-    .ChatsPage{
-        background-color: rgb(33,33,33);
-        color: #FF6410;
-        h3{
-            color: transparent;
-            background: #FF6410;
-            -webkit-background-clip: text;
-            -moz-background-clip: text;
-            background-clip: text;
-            text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.5);
-        }
-    }
-}
 
 .ChatsFlow {
-    position: absolute;
-    margin-top: 5vmin;
-    right: 5vw;
     width: 70vw;
     height: 85vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
-    overflow-y: scroll;
-    border: solid 1px white;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
     border-radius: 7px;
-    animation: fadeIn 0.5s;
-    color: black;
-
     .messages {
-        width: 65vw;
         height: 80vh;
+        overflow-y: scroll;
         display: flex;
         flex-direction: column;
-        justify-content: flex-end;
-        align-items: flex-start;
-        margin-bottom: 5px;
+        align-items: center;
+        margin-top: auto;
         .message{
-            display: flex;
-            align-items: center;
-            font-size: larger;
-            padding-left: 5px;
-            border-radius: 7px;
-            margin: 2.5px;
-            width: 50vw;
-            height: 10vh;
+            box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
             background-color: white;
-            box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+            color: black;
+            margin: 5px;
+            border-radius: 7px;
+            height: 10vh;
+            width: 65vw;
+            padding: 5px;
+
         }
     }
 
     form {
+        height: 5vh;
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 5vh;
-        width: 70vw;
-        background-color: green;
-
         input {
-            width: 58vw;
+            height: 3.5vh;
+            width: 60vw;
             border-radius: 7px;
+            background-color: white;
+            border: solid 1px black;
+            box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+            color:black;
         }
 
         button {
-            width: 9vw;
-            margin: 5px;
+            background-color: white;
+            color: black;
+            width: 5vw;
+            padding: 5px;
             border-radius: 7px;
         }
 
@@ -115,86 +75,39 @@
     }
 }
 
-@keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
 
-    100% {
-        opacity: 1;
-    }
-}
 
-@media (max-width:900px) {
-    .ChatsFlow {
-        position: absolute;
-        top: 16vh;
-        width: 90vw;
-        height: 68vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-
-    }
-}
-
-@media (prefers-color-scheme:dark) {
-    .ChatsFlow {
-        background-color: rgb(28, 28, 28);
-        box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
-
-    }
-}
 
 .ChatsAside {
-    position: absolute;
-    margin-top: 5vmin;
-    left: 5vw;
-    width: 19vw;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    border-radius: 7px;
     height: 85vh;
+    width: 15vw;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     overflow-y: scroll;
-    border: solid 1px white;
-    animation: fadeIn 0.5s;
-    border-radius: 7px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-
     h1 {
-
-        width: 12vw;
-        border-radius: 7px;
-        height: 12vw;
-
+        width: 10vw;
+        height: 10vw;
         display: flex;
-        flex-direction: column;
         justify-content: center;
+        flex-direction: column;
         align-items: center;
 
         p {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 15px;
-            width: 12vw;
-
+            font-size: 2vmin;
+            color: black;
         }
     }
 
     img {
-        margin: 3px;
-        width: 8vw;
-        height: 10vw;
         border-radius: 50%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
         overflow: hidden;
-        animation: fadeIn 2s;
-        box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+      width: 90px;
+      height: 90px;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
     }
 
     h1:hover,
@@ -202,6 +115,113 @@
         cursor: pointer;
     }
 }
+}
+
+@media (prefers-color-scheme:dark) {
+    .ChatsPage{
+        background-color: rgb(28,28,28);
+        .yourMessages{
+            color: #FF6410;
+        }
+        .ChatsAside{
+            border: solid 1px white;
+            box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 0px, rgba(255, 255, 255, 0.1) 0px 8px 24px, rgba(255, 255, 255, 0.1) 0px 16px 48px;
+            .friendName{
+                color: #FF6410;
+            }
+        }
+        .ChatsFlow{
+            box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 0px, rgba(255, 255, 255, 0.1) 0px 8px 24px, rgba(255, 255, 255, 0.1) 0px 16px 48px;
+            border: solid 2px white;
+            .messages{
+                .message{
+                    background-color: rgb(28,28,28);
+                    border: solid 1px white;
+                    color: white;
+                }
+
+            }
+            form{
+                input{
+                    background-color: rgb(18,18,18);
+                    border: solid 1px white;
+                    color: white;
+                }
+                button{
+                    background-color: rgb(28,28,28);
+                    color: white;
+                    margin-left: 5px;
+
+                }
+                button:hover{
+                    background-color: #FF6410;
+                    color: white;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width:900px) {
+        .ChatsPage {
+            flex-direction: column;
+            align-items: center;
+            .yourMessages{
+                display: none;
+            }
+                .ChatsAside {
+                    margin-top: 10px;
+                    width: 90vw;
+                    height: 10vh;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+                    overflow-x: scroll;
+                    h1{
+                        width: 14vh;
+                        height: 14vh;
+                        img{
+                            height: 50px;
+                            width: 50px;
+                            box-shadow: rgba(255, 255, 255, 0.4) 0px 2px 4px, rgba(255, 255, 255, 0.3) 0px 7px 13px -3px, rgba(255, 255, 255, 0.2) 0px -3px 0px inset;
+                        }
+                        p{
+                            display: none;
+                        }
+                    }
+                    .friendName {
+
+                    }
+                }
+        
+                .ChatsFlow {
+                    width: 90vw;
+                    align-items: center;
+                    .messages {
+                        
+                        width: 90vw;
+                        .message {
+                            width: 85vw;
+                        }
+
+                    }
+        
+               form {
+                        input {
+                            color: white;
+                            width: 80vw;
+                        }
+                        button{
+                            width: 10vw;
+                        }
+                        button:hover {
+
+                        }
+                    }
+                }
+            }
+}
+
 
 @keyframes fadeIn {
     0% {
@@ -210,30 +230,5 @@
 
     100% {
         opacity: 1;
-    }
-}
-
-@media (max-width:900px) {
-    .ChatsAside {
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
-        position: absolute;
-        margin-top: 10vmin;
-        left: 5vw;
-        width: 90vw;
-        height: 10vh;
-        display: flex;
-        flex-direction: column;
-        color: black;
-        justify-content: center;
-        align-items: center;
-    }
-}
-
-@media (prefers-color-scheme:dark) {
-    .ChatsAside {
-        background-color: rgb(28, 28, 28);
-
-        box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
-
     }
 }
