--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -1,7 +1,7 @@
 .Post {
   background-color: black;
   padding: 10px;
-  border-radius: 2px;
+  border-radius: 5px;
   width: 60vw;
   height: 60vh;
   display: flex;
@@ -16,7 +16,7 @@
 
     width: 100%;
     height: 5vh;
-    border-bottom: solid 1px white;
+
     h2 {
       color: white;
     }
@@ -28,6 +28,8 @@
     .postText {
       width: 100%;
       height: 100%;
+      background-color: rgb(220, 220, 220);
+      color: rgb(28, 28, 28);
       font-size: calc(1vw + 1.5vh);
     }
   }
