--- a/src/pages/ChatsPage/ChatsPage.module.scss
+++ b/src/pages/ChatsPage/ChatsPage.module.scss
@@ -1,5 +1,5 @@
 .ChatsPage {
-  background-color: white;
+  background-color: black;
   position: absolute;
   top: 33px;
   width: 100vw;
@@ -13,12 +13,26 @@
     width: 70vw;
     height: 85vh;
     border-radius: 7px;
+    background-color: rgb(28, 28, 28);
+    overflow-y: scroll;
+    overflow-x: hidden;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      display: none;
+    }
     .messages {
       height: 80vh;
-      overflow-y: scroll;
       display: flex;
       flex-direction: column-reverse;
       align-items: center;
+      overflow-y: scroll;
+      overflow-x: hidden;
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+      &::-webkit-scrollbar {
+        display: none;
+      }
       .message {
         //animation: fadeIn 1s;
         color: black;
@@ -124,6 +138,7 @@
   }
 
   .ChatsAside {
+    background-color: rgb(28, 28, 28);
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
       rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
     border-radius: 7px;
@@ -134,6 +149,11 @@
     justify-content: flex-start;
     align-items: center;
     overflow-y: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      display: none;
+    }
     h1 {
       width: 10vw;
       height: 10vw;
@@ -144,7 +164,7 @@
 
       p {
         font-size: 2vmin;
-        color: black;
+        color: white;
       }
     }
 
@@ -167,182 +187,182 @@
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  .ChatsPage {
-    background-color: rgb(28, 28, 28);
-    .yourMessages {
-      color: #ff6410;
-    }
-    .ChatsAside {
-      border: solid 1px white;
-      box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 0px,
-        rgba(255, 255, 255, 0.1) 0px 8px 24px,
-        rgba(255, 255, 255, 0.1) 0px 16px 48px;
-      .friendName {
-        color: #ff6410;
-      }
-    }
-    .ChatsFlow {
-      border: solid 1px white;
-      aside {
-        color: #ff6410;
-        text-shadow: #474747 3px 5px 2px;
-      }
-      .messages {
-        .message {
-          background-color: rgb(28, 28, 28);
-          border: solid 1px white;
-          color: white;
-        }
-      }
-      form {
-        border-top: solid 1px white;
-        input {
-          background-color: rgb(18, 18, 18);
-          border: solid 1px white;
-          color: white;
-        }
-        button {
-          background-color: rgb(28, 28, 28);
-          color: white;
-          margin-left: 5px;
-        }
-        button:hover {
-          background-color: #ff6410;
-          color: white;
-        }
-      }
-    }
-  }
-}
+// @media (prefers-color-scheme: dark) {
+//   .ChatsPage {
+//     background-color: rgb(28, 28, 28);
+//     .yourMessages {
+//       color: #ff6410;
+//     }
+//     .ChatsAside {
+//       border: solid 1px white;
+//       box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 0px,
+//         rgba(255, 255, 255, 0.1) 0px 8px 24px,
+//         rgba(255, 255, 255, 0.1) 0px 16px 48px;
+//       .friendName {
+//         color: #ff6410;
+//       }
+//     }
+//     .ChatsFlow {
+//       border: solid 1px white;
+//       aside {
+//         color: #ff6410;
+//         text-shadow: #474747 3px 5px 2px;
+//       }
+//       .messages {
+//         .message {
+//           background-color: rgb(28, 28, 28);
+//           border: solid 1px white;
+//           color: white;
+//         }
+//       }
+//       form {
+//         border-top: solid 1px white;
+//         input {
+//           background-color: rgb(18, 18, 18);
+//           border: solid 1px white;
+//           color: white;
+//         }
+//         button {
+//           background-color: rgb(28, 28, 28);
+//           color: white;
+//           margin-left: 5px;
+//         }
+//         button:hover {
+//           background-color: #ff6410;
+//           color: white;
+//         }
+//       }
+//     }
+//   }
+// }
 
-@media (max-width: 900px) {
-  .ChatsPage {
-    flex-direction: column;
-    align-items: center;
-    height: 80vh;
-    top: 5vh;
-    .ChatsAside {
-      margin-top: 10px;
-      width: 90vw;
-      height: 15vh;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-      overflow-x: scroll;
-      overflow-y: hidden;
-      h1 {
-        width: 14vh;
-        height: 14vh;
-        img {
-          height: 50px;
-          width: 50px;
-          box-shadow: rgba(255, 255, 255, 0.4) 0px 2px 4px,
-            rgba(255, 255, 255, 0.3) 0px 7px 13px -3px,
-            rgba(255, 255, 255, 0.2) 0px -3px 0px inset;
-        }
-        p {
-          display: none;
-        }
-      }
-      .friendName {
-      }
-    }
+// @media (max-width: 900px) {
+//   .ChatsPage {
+//     flex-direction: column;
+//     align-items: center;
+//     height: 80vh;
+//     top: 5vh;
+//     .ChatsAside {
+//       margin-top: 10px;
+//       width: 90vw;
+//       height: 15vh;
+//       flex-direction: row;
+//       justify-content: center;
+//       align-items: center;
+//       overflow-x: scroll;
+//       overflow-y: hidden;
+//       h1 {
+//         width: 14vh;
+//         height: 14vh;
+//         img {
+//           height: 50px;
+//           width: 50px;
+//           box-shadow: rgba(255, 255, 255, 0.4) 0px 2px 4px,
+//             rgba(255, 255, 255, 0.3) 0px 7px 13px -3px,
+//             rgba(255, 255, 255, 0.2) 0px -3px 0px inset;
+//         }
+//         p {
+//           display: none;
+//         }
+//       }
+//       .friendName {
+//       }
+//     }
 
-    .ChatsFlow {
-      width: 90vw;
-      align-items: center;
-      height: 70vh;
-      .messages {
-        margin-left: 0px;
-        width: 90vw;
-        overflow-x: hidden;
-        .message {
-          margin-left: 50px;
-          width: 90vw;
-        }
-      }
+//     .ChatsFlow {
+//       width: 90vw;
+//       align-items: center;
+//       height: 70vh;
+//       .messages {
+//         margin-left: 0px;
+//         width: 90vw;
+//         overflow-x: hidden;
+//         .message {
+//           margin-left: 50px;
+//           width: 90vw;
+//         }
+//       }
 
-      form {
-        display: flex;
-        justify-content: flex-start;
-        input {
-          color: white;
-          width: 70vw;
-        }
-        button {
-          width: 20vw;
-          height: 4vh;
-        }
-        button:hover {
-        }
-      }
-      aside {
-      }
-    }
-  }
-}
+//       form {
+//         display: flex;
+//         justify-content: flex-start;
+//         input {
+//           color: white;
+//           width: 70vw;
+//         }
+//         button {
+//           width: 20vw;
+//           height: 4vh;
+//         }
+//         button:hover {
+//         }
+//       }
+//       aside {
+//       }
+//     }
+//   }
+// }
 
-@media (prefers-color-scheme: dark) {
-  .ChatsPage {
-    background-color: black;
-    .ChatsFlow {
-      background-color: rgb(28, 28, 28);
-      .messages {
-        .message {
-          border: none;
-          align-items: center;
-        }
-        #userMessage > p {
-          background-color: #ff6410;
-        }
-        #friendMessage > p {
-          background-color: rgb(130, 129, 129);
-        }
+// @media (prefers-color-scheme: dark) {
+//   .ChatsPage {
+//     background-color: black;
+//     .ChatsFlow {
+//       background-color: rgb(28, 28, 28);
+//       .messages {
+//         .message {
+//           border: none;
+//           align-items: center;
+//         }
+//         #userMessage > p {
+//           background-color: #ff6410;
+//         }
+//         #friendMessage > p {
+//           background-color: rgb(130, 129, 129);
+//         }
 
-        form {
-          input {
-          }
+//         form {
+//           input {
+//           }
 
-          button {
-            background-color: #ff6410;
-            border: none;
-          }
+//           button {
+//             background-color: #ff6410;
+//             border: none;
+//           }
 
-          button:hover {
-          }
-        }
-        aside {
-          width: 70vw;
-          margin-bottom: 0;
-        }
-      }
+//           button:hover {
+//           }
+//         }
+//         aside {
+//           width: 70vw;
+//           margin-bottom: 0;
+//         }
+//       }
 
-      .ChatsAside {
-        background-color: rgb(28, 28, 28);
-        h1 {
-          p {
-          }
-        }
+//       .ChatsAside {
+//         background-color: rgb(28, 28, 28);
+//         h1 {
+//           p {
+//           }
+//         }
 
-        img {
-        }
+//         img {
+//         }
 
-        h1:hover,
-        img:hover {
-          cursor: pointer;
-        }
-      }
-    }
+//         h1:hover,
+//         img:hover {
+//           cursor: pointer;
+//         }
+//       }
+//     }
 
-    @keyframes fadeIn {
-      0% {
-        opacity: 0;
-      }
+//     @keyframes fadeIn {
+//       0% {
+//         opacity: 0;
+//       }
 
-      100% {
-        opacity: 1;
-      }
-    }
-  }
-}
+//       100% {
+//         opacity: 1;
+//       }
+//     }
+//   }
+// }
