--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -15,6 +15,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    border-radius: 5px;
 
     h1 {
       background-color: #ff6410;
@@ -25,6 +26,7 @@
       align-items: center;
       font-size: 25px;
       font-weight: 500;
+      border-radius: 5px;
     }
   }
   .userInfo {
