--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -2,6 +2,7 @@
   background-color: rgb(28, 28, 28);
   height: 100vh;
   display: flex;
+  width: 100vw;
   .heading {
     height: 10vh;
     max-height: 60px;
@@ -30,6 +31,7 @@
       background-color: #ff6410;
       color: white;
       font-weight: bold;
+      border-radius: 5px;
     }
     #profilePic {
       width: 150px;
@@ -46,6 +48,7 @@
       align-items: center;
       justify-content: center;
       margin-top: 20px;
+      border-radius: 5px;
       overflow-y: scroll;
       -ms-overflow-style: none;
       scrollbar-width: none;
@@ -54,7 +57,7 @@
       }
     }
     .functions {
-      width: 90%;
+      width: 75%;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -63,6 +66,23 @@
       margin-top: 20px;
       border: solid 1px white;
       border-radius: 5px;
+      .userFuncs {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 100%;
+        background-color: white;
+        width: 30px;
+        height: 30px;
+        color: black;
+        padding: 3px;
+        font-weight: bold;
+      }
+      .userFuncs:hover {
+        cursor: pointer;
+        width: 35px;
+        height: 35px;
+      }
     }
   }
   #posts {
@@ -75,15 +95,12 @@
     background-color: rgb(28, 28, 28);
   }
   .userPosts {
-    h1 {
-      background-color: #ff6410;
-      color: white;
-      width: 100%;
-      height: 100%;
-      font-size: calc(1vw + 1.5vh);
-    }
-    width: 55vw;
-    margin-left: 10vw;
+    margin-right: 100px;
+    padding: 5px;
+    width: 80vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     height: 100%;
     overflow-y: scroll;
     -ms-overflow-style: none;
@@ -91,6 +108,13 @@
     &::-webkit-scrollbar {
       display: none;
     }
+  }
+  h1 {
+    background-color: #ff6410;
+    color: white;
+    width: 100%;
+    height: 100%;
+    font-size: calc(1vw + 1.5vh);
   }
 }
 
